feat: add Comment Deletion Handler
