# docs/swagger.yaml
@@ -112,6 +112,27 @@ paths:
       summary: 新增评论
       tags:
       - 评论
+  /api/comment/delete:
+    delete:
+      description: 根据ID删除评论
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/common.Resp'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/common.Resp'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/common.Resp'
+      security:
+      - ApiKeyAuth: []
+      summary: 根据ID删除评论
+      tags:
+      - 评论
   /api/comment/getAll:
     get:
       description: 获取所有评论
@@ -206,4 +227,10 @@ paths:
       summary: 初始化服务端
       tags:
       - 服务端
+securityDefinitions:
+  ApiKeyAuth:
+    description: '"将 "Bearer TOKEN" 设置为初始化时设置的 API 密钥"'
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
